--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
 		<endo2java.version>0.0.1-SNAPSHOT</endo2java.version>
 		<vaadin-pagedtable.version>0.6.5</vaadin-pagedtable.version>
 		<vaadin-googlemaps.version>1.0.0</vaadin-googlemaps.version>
+		<nomination-api.version>3.0</nomination-api.version>
 	</properties>
 
 
@@ -87,6 +88,11 @@
 			<groupId>com.vaadin.tapio</groupId>
 			<artifactId>googlemaps</artifactId>
 			<version>${vaadin-googlemaps.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>fr.dudie</groupId>
+			<artifactId>nominatim-api</artifactId>
+			<version>${nomination-api.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.moomeen.endo2java</groupId>
