--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -4,4 +4,4 @@ log4j.appender.consoleAppender=org.apache.log4j.ConsoleAppender
 log4j.appender.consoleAppender.layout=org.apache.log4j.PatternLayout
 log4j.appender.consoleAppender.layout.ConversionPattern=%d [%t] %-5p %c %x - %m%n
 
-log4j.category.com.moomeen=DEBUG
+log4j.category.com.moomeen.=DEBUG
