--- a/pom.xml
+++ b/pom.xml
@@ -119,7 +119,16 @@
 					<groupId>com.vaadin</groupId>
 					<artifactId>vaadin-server</artifactId>
 				</exclusion>
+				<exclusion>
+					 <groupId>javax.servlet</groupId>
+					<artifactId>servlet-api</artifactId>
+				</exclusion>
 			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>com.vaadin.addon</groupId>
+			<artifactId>vaadin-charts</artifactId>
+			<version>2.0.0.beta1</version>
 		</dependency>
 		<!-- Nominatim API -->
 		<dependency>
