--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
+vaadin.servlet.params.productionMode = ${productionMode}
+vaadin.static.servlet.params.productionMode = ${productionMode}
 vaadin.servlet.params.widgetset = "AppWidgetSet"
