--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
 		<vaadin-lazyloadwrapper.version>0.0.1</vaadin-lazyloadwrapper.version>
 		<vaadin-jfreechartwrapper.version>3.0.2</vaadin-jfreechartwrapper.version>
 		<vaadin-tableexport.version>1.5.1.5</vaadin-tableexport.version>
+		<vaadin-loginform.version>0.4</vaadin-loginform.version>
 		<nomination-api.version>3.0</nomination-api.version>
 		<mongo-driver.version>2.12.4</mongo-driver.version>
 		<morphia.version>0.108</morphia.version>
@@ -130,6 +131,11 @@
 			<groupId>org.vaadin.addon</groupId>
 			<artifactId>tableexport-for-vaadin</artifactId>
 			<version>${vaadin-tableexport.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.vaadin.addons</groupId>
+			<artifactId>loginform</artifactId>
+			<version>${vaadin-loginform.version}</version>
 		</dependency>
 		<!-- Nominatim API -->
 		<dependency>
