--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 vaadin.servlet.params.productionMode = ${productionMode}
 vaadin.static.servlet.params.productionMode = ${productionMode}
 vaadin.servlet.params.widgetset = "AppWidgetSet"
+
+server.port = ${serverPort}
+server.ssl.key-store = ${keyStorePath}
+server.ssl.key-store-password = ${keyStorePassword}
+server.ssl.key-password = ${keyStorePassword}
