--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ vaadin.static.servlet.params.productionMode = ${productionMode}
 vaadin.servlet.params.widgetset = "AppWidgetSet"
 
 server.port = ${serverPort}
+server.ssl.enabled = ${sslEnabled}
 server.ssl.key-store = ${keyStorePath}
 server.ssl.key-store-password = ${keyStorePassword}
 server.ssl.key-password = ${keyStorePassword}
