debug logging fix

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ server.ssl.enabled = ${sslEnabled}
 server.ssl.key-store = ${keyStorePath}
 server.ssl.key-store-password = ${keyStorePassword}
 server.ssl.key-password = ${keyStorePassword}
+
+logging.level.com.moomeen = DEBUG
